--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,6 @@ section {
     display: flex;
     flex-direction: column;
     margin: 55px 70px 44px 70px;
-
     width: 100%;
 }
 
@@ -135,3 +134,29 @@ section h1 {
     border-radius: 33px;
 }
 
+.section__end {
+    margin: 0 auto;
+    width: 250px;
+    height: 50px;
+    border: 2px solid #97b621;
+    background: #fff;
+    color: #97b621;
+    font-size: 16px;
+    line-height: 22px;
+    border-radius: 33px;
+}
+
+.section__btn {
+    margin: 0 auto;
+    position: relative;
+}
+
+.section__btn::after {
+    content: ''; 
+    position: absolute;
+    top: 15px;
+    right: 200px;
+    border-top: 10px solid transparent;
+    border-left: 20px solid #97b621;
+    border-bottom: 10px solid transparent;
+}
