end second section

--- a/css/main.css
+++ b/css/main.css
@@ -57,12 +57,11 @@ button, h1, h2, h3 {
 section {
     display: flex;
     flex-direction: column;
-    margin: 55px 70px 44px 70px;
     width: 100%;
 }
 
-section h1 {
-    text-align: center;
+section h1, h2 {
+    margin: 20px auto 30px auto;
     text-transform: uppercase;
     font-size: 40px;
     line-height: 50px;
@@ -159,4 +158,46 @@ section h1 {
     border-top: 10px solid transparent;
     border-left: 20px solid #97b621;
     border-bottom: 10px solid transparent;
+}
+
+.second-section {
+    background-color: aliceblue;
+    width: 100%;
+}
+
+.card__holder {
+    display: flex;
+    flex-direction: row;
+    margin-top: 175px;
+}
+
+.photo {
+    position: relative;
+    bottom: 190px;
+    margin: 0px 32px 0 32px;
+}
+
+.photo img {
+    position: relative;
+}
+
+.photo__text {
+    position: absolute;
+    width: 262px;
+    height: 261px;
+    color: #fff;
+    visibility: hidden;
+    font-size: 18px;
+    line-height: 35px;
+    background-color: rgba(21,51,68,0.6);
+    transition: all .3s ease-in-out;
+}
+
+.photo__text:hover {
+    visibility: visible;
+}
+
+.photo__text p {
+    padding: 20% 20% 0 20%;
+    text-align: center;
 }
