добавлен alt в logo

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,9 @@ button, h1, h2, h3 {
 }
 
 .conteiner {
-    margin: 17px 84px 0 84px;
+    padding-top: 17px;
+    padding-left: 84px;
+    padding-right: 84px;
 }
  
 .header {
